# gravador_de_aula

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  config.py  file_manager.py  gravador.py  logger_config.py  main.py  pyproject.toml  requirements-dev.txt  requirements-gdrive.txt  requirements.txt  upload_gdrive.py
.github/workflows/: release.yml  tests.yml
doc/: ESTRUTURA_FUTURA.md  INSTALACAO_WINDOWS.md  README.md  architecture.md  banner-prompt.md  configuration.md  development.md  flows.md  grc-security.md
doc/diagrams/: README.md
scripts/: setup.ps1
tests/: __init__.py  conftest.py  test_config.py  test_file_manager.py  test_gravador.py  test_logger_config.py  test_main.py  test_main_cli.py  test_upload_gdrive.py
